k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: playly
  labels:
    app.kubernetes.io/name: playly
    app.kubernetes.io/managed-by: argocd
