k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: playly-frontend-svc
  namespace: playly
spec:
  selector:
    app: playly-frontend
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: playly-backend-svc
  namespace: playly
spec:
  selector:
    app: playly-backend
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  type: ClusterIP
